190724 Implementacion de ProductMapper y 2 endpoint de consulta, nueva estructura de DTO
